Trying to fix image spacing and text container

--- a/style.css
+++ b/style.css
@@ -6,9 +6,6 @@
   height: 400px;
   background-color: white;
   border: 1px solid black;
-  box-shadow: 10px 10px 10px black;
-  box-sizing: border-box;
-  margin: auto;
 }
 
 #meme-text {
@@ -18,11 +15,9 @@
   text-shadow: 5px 5px 5px black;
   width: 600px;
   height: 400px;
-  padding: 10px;
 }
 
 #meme-image {
   width: 600px;
   height: 400px;
-  border: 1px solid black;
 }
